# Content-Ideation-Pipeline-

./: README.md  pyproject.toml
content_ideation_pipeline/: .gitignore  app.py  pyproject.toml
content_ideation_pipeline/schemas/: video.py
content_ideation_pipeline/services/: clickup_service.py  download_service.py  email_listener.py  marketing_analysis.py  transcript_service.py
content_ideation_pipeline/tests/: check_models.py  test_parser.py  test_pipeline.py
content_ideation_pipeline/troubleshooting/: DEPLOYMENT_GUIDE.md  INSTAGRAM_AUTH_GUIDE.md  QUICK_START.md  curl_test_script.md  notes.md  troubleshooting.md
content_ideation_pipeline/utils/: algorithm.md  architecture.md  test_cheat.md  update main guide  yt-dlp-guide.py
