[project]
name = "pvragon-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.2",
    "flask>=3.1.2",
    "google-genai>=1.62.0",
    "google-generativeai>=0.8.6",
    "groq>=1.0.0",
    "gunicorn>=24.1.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yt-dlp>=2025.12.8",
]
